--- a/src/content/en/tools/lighthouse/_toc.yaml
+++ b/src/content/en/tools/lighthouse/_toc.yaml
@@ -22,6 +22,8 @@ toc:
     path: /web/tools/lighthouse/audits/text-compression
   - title: Estimated Input Latency
     path: /web/tools/lighthouse/audits/estimated-input-latency
+  - title: First Contentful Paint
+    path: /web/tools/lighthouse/audits/first-contentful-paint
   - title: First Interactive
     path: /web/tools/lighthouse/audits/first-interactive
   - title: First Meaningful Paint
