PWA-ILT: new content

--- a/src/content/en/ilt/pwa/_book.yaml
+++ b/src/content/en/ilt/pwa/_book.yaml
@@ -139,6 +139,18 @@ upper_tabs:
             path: /web/ilt/pwa/integrating-analytics
           - title: Lab
             path: /web/ilt/pwa/lab-integrating-analytics
+        - title: PWA with AMP
+          section:
+          - title: Lab
+            path: /web/ilt/pwa/lab-build-a-progressive-web-amp
+        - title: Cloud Firestore
+          section:
+          - title: Lab
+            path: /web/ilt/pwa/lab-cloud-firestore
+        - title: PWA News Reader
+          section:
+          - title: Challenge
+            path: /web/ilt/pwa/challenge-convert-a-news-app-to-a-pwa
         - title: Appendix
           section:
           - title: Setting Up the Labs
