adding new episode

--- a/src/content/en/shows/designer-vs-developer/_toc.yaml
+++ b/src/content/en/shows/designer-vs-developer/_toc.yaml
@@ -3,6 +3,8 @@ toc:
     section:
     - title: 'Podcast'
       section:
+      - title: 'UX research and usability testing'
+        path: /web/shows/designer-vs-developer/podcast/DVDS4E02-ux-research-usability-testingy
       - title: 'How we designed Chrome'
         path: /web/shows/designer-vs-developer/podcast/DVDS4E01-how-we-designed-chrome
       - title: 'Designing for offline'
