--- a/src/data/common-typos.yaml
+++ b/src/data/common-typos.yaml
@@ -207,6 +207,9 @@
 - typo: \bwith\s+with\b
   fix: with
 
+- typo: \byou\s+you\b
+  fix: you
+
 
 ## DevSite Word List
 # See https://developers.google.com/style/word-list
@@ -265,6 +268,18 @@
 - typo: web\ssite
   fix: website
   description: "See: https://developers.google.com/style/word-list#website"
+
+- typo: \bhis|her('?s)?\b
+  fix: "they/their/theirs/they're/etc"
+  description: "Avoid gendered pronouns"
+
+- typo: \bs?he('?s)?\b
+  fix: "they/their/theirs/they're/etc"
+  description: "Avoid gendered pronouns"
+  
+- typo: \bhim|her[^']\b
+  fix: "they/their/theirs/they're/etc"
+  description: "Avoid gendered pronouns"
 
 ## Spelling mistakes & typos in docs
 
