--- a/src/content/en/tools/lighthouse/_toc.yaml
+++ b/src/content/en/tools/lighthouse/_toc.yaml
@@ -22,8 +22,8 @@ toc:
     path: /web/tools/lighthouse/audits/estimated-input-latency
   - title: First Contentful Paint
     path: /web/tools/lighthouse/audits/first-contentful-paint
-  - title: First Interactive
-    path: /web/tools/lighthouse/audits/first-interactive
+  - title: First CPU Idle
+    path: /web/tools/lighthouse/audits/first-cpu-idle
   - title: First Meaningful Paint
     path: /web/tools/lighthouse/audits/first-meaningful-paint
   - title: Has Enormous Network Payloads
