--- a/src/content/en/shows/designer-vs-developer/_toc.yaml
+++ b/src/content/en/shows/designer-vs-developer/_toc.yaml
@@ -4,7 +4,7 @@ toc:
     - title: 'Podcast'
       section:
       - title: 'Prototyping motion and material design'
-        path: /web/shows/designer-vs-developer/podcast/DVDS4E04-prototyping-motion.md
+        path: /web/shows/designer-vs-developer/podcast/DVDS4E04-prototyping-motion
       - title: 'Material Design Components'
         path: /web/shows/designer-vs-developer/podcast/DVDS4E03-material-design-components
       - title: 'UX research and usability testing'
