--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   },
   "private": true,
   "dependencies": {
+    "@google-cloud/translate": "^2.1.2",
     "chalk": "^1.1.3",
+    "commander": "^2.19.0",
     "del": "^2.2.2",
     "fs-extra": "^4.0.1",
     "github": "^8.1.1",
