Blink components update

--- a/src/data/blinkComponents.json
+++ b/src/data/blinkComponents.json
@@ -103,6 +103,7 @@
   "Blink>PresentationAPI",
   "Blink>Previews",
   "Blink>PushAPI",
+  "Blink>ReportingObserver",
   "Blink>SVG",
   "Blink>SavePage",
   "Blink>Scheduler",
@@ -195,6 +196,7 @@
   "Internals>CrashReporting",
   "Internals>EarlyLoadingFramework",
   "Internals>FeatureEngagement",
+  "Internals>GPU>Dawn",
   "Internals>GPU>Internals",
   "Internals>GPU>SwiftShader",
   "Internals>GPU>Video",
@@ -254,6 +256,7 @@
   "Internals>Preload",
   "Internals>Printing",
   "Internals>Printing>CUPS",
+  "Internals>ResourceCoordinator",
   "Internals>Sandbox",
   "Internals>Sandbox>SiteIsolation",
   "Internals>Services>WindowService",
@@ -334,6 +337,7 @@
   "UI>Browser>ContentSuggestions>Feed",
   "UI>Browser>Core",
   "UI>Browser>Downloads",
+  "UI>Browser>Downloads(Android)",
   "UI>Browser>FirstRun",
   "UI>Browser>FirstRun(iOS)",
   "UI>Browser>FullScreen",
@@ -349,6 +353,7 @@
   "UI>Browser>Mobile>NavPanel",
   "UI>Browser>Mobile>SearchWidget",
   "UI>Browser>Mobile>Settings",
+  "UI>Browser>Mobile>Settings>DataSaver",
   "UI>Browser>Mobile>Share(Android)",
   "UI>Browser>NewTabPage",
   "UI>Browser>NewTabPage(iOS)",
