--- a/src/content/en/_index.yaml
+++ b/src/content/en/_index.yaml
@@ -20,7 +20,7 @@ landing_page:
                     Tutorials, guides, and best practices for building the next
                     generation of web experiences.
                   </p>
-                  <a class="button gc-analytics-event" data-category="webFu" data-label="fundamentals-landing" data-action="web-home" href="/web/fundamentals/">Get Started</a>
+                  <a class="button gc-analytics-event" data-category="webFu" data-label="fundamentals-landing" data-action="web-home" href="/web/fundamentals/">Get started</a>
                   <div class="clearfix"></div>
                 </div>
                 <div class="wf-hero-flex-item wf-hero-tools">
@@ -33,7 +33,7 @@ landing_page:
                     and more tools to make your life easier and improve your
                     development artistry.
                   </p>
-                  <a class="button gc-analytics-event" href="/web/tools/" data-category="webFu" data-label="tools-landing" data-action="web-home">Learn More</a>
+                  <a class="button gc-analytics-event" href="/web/tools/" data-category="webFu" data-label="tools-landing" data-action="web-home">Learn more</a>
                   <div class="clearfix"></div>
                 </div>
               </div>
@@ -110,7 +110,7 @@ landing_page:
       - name: data-action
         value: web-home
       buttons:
-      - label: Get Started
+      - label: Get started
         path: /web/progressive-web-apps/
         classname: button button-primary
         attributes:
@@ -123,7 +123,7 @@ landing_page:
         - name: data-action
           value: web-home
 
-    - heading: Load Instantly
+    - heading: Load instantly
       description: >
         Users don't have the patience to wait for sites that can't deliver
         content quickly.
@@ -139,7 +139,7 @@ landing_page:
       - name: data-action
         value: web-home
       buttons:
-      - label: Get Fast
+      - label: Get fast
         path: /web/fundamentals/performance/
         classname: button button-primary
         attributes:
@@ -166,7 +166,7 @@ landing_page:
 
   - classname: wf-landing-row
     items:
-    - heading: Get Involved
+    - heading: Get involved
       description: >
         Check the state of existing bugs and provide feedback for web platform features.
       custom_image:
@@ -183,7 +183,7 @@ landing_page:
       - name: data-action
         value: web-home
       buttons:
-      - label: Get Involved
+      - label: Get involved
         path: /web/feedback/
         classname: button button-primary
         attributes:
@@ -213,7 +213,7 @@ landing_page:
       - name: data-action
         value: web-home
       buttons:
-      - label: Start Learning
+      - label: Start learning
         path: /web/ilt/
         classname: button button-primary
         attributes:
@@ -226,7 +226,7 @@ landing_page:
         - name: data-action
           value: web-home
 
-    - heading: Case Studies
+    - heading: Case studies
       description: >
         Learn why and how other developers have used the web to create amazing
         web experiences for their users.
@@ -244,7 +244,7 @@ landing_page:
       - name: data-action
         value: web-home
       buttons:
-      - label: See More
+      - label: See more
         path: /web/showcase/
         classname: button button-primary
         attributes:
