--- a/src/content/en/tools/workbox/_index.yaml
+++ b/src/content/en/tools/workbox/_index.yaml
@@ -25,7 +25,7 @@ landing_page:
 
       <p class="devsite-landing-row-description">JavaScript Libraries for adding offline support to web apps</p>
 
-      <p><a class="button button-primary" href="/web/tools/workbox/guides/get-started">Get Started</a></p>
+      <p><a class="button button-primary" href="/web/tools/workbox/guides/get-started">Get started</a></p>
       </div>
 
   - background: grey
@@ -246,7 +246,7 @@ landing_page:
         Pinterest and WIRED are using Workbox in production.
       youtube_id: DtuJ55tmjps
 
-  - heading: "Who's Using Workbox?"
+  - heading: "Who's using Workbox?"
     description: >
       <style>
       .using-workbox {
@@ -278,7 +278,7 @@ landing_page:
     - custom_html: >
         <div style="width: 100%; text-align: center;">
           <h2>Learn how to use Workbox</h2>
-          <p><a class="button button-primary" href="/web/tools/workbox/guides/get-started">Get Started</a></p>
+          <p><a class="button button-primary" href="/web/tools/workbox/guides/get-started">Get started</a></p>
         </div>
 
   - heading: "Contributors"
