--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -1848,7 +1848,7 @@ kinukoyasuda:
     unit: Chrome
   country: JPN
   description:
-    en: "Tech lead of loading projects for the web platform in Chrome"
+    en: "Software Engineer at Google working on the web platform"
 
 maciejzasada:
   name:
