--- a/src/content/en/fundamentals/performance/_toc.yaml
+++ b/src/content/en/fundamentals/performance/_toc.yaml
@@ -53,6 +53,9 @@ toc:
         - title: Automating Image Optimization
           path: /web/fundamentals/performance/optimizing-content-efficiency/automating-image-optimization/
           step_group: perf-oce
+        - title: Adapting to Users with Client Hints
+          path: /web/fundamentals/performance/optimizing-content-efficiency/client-hints/
+          step_group: perf-oce
         - title: Replace Animated GIFs with Video
           path: /web/fundamentals/performance/optimizing-content-efficiency/replace-animated-gifs-with-video/
           step_group: perf-oce
@@ -193,4 +196,3 @@ toc:
       - title: Next steps
         path: /web/fundamentals/performance/audit/next
         step_group: perf-audit
-
