--- a/src/content/en/tools/workbox/_project.yaml
+++ b/src/content/en/tools/workbox/_project.yaml
@@ -32,4 +32,4 @@ announcement:
         vertical-align: middle;
         margin-right: 8px;
       }
-    </style> The <a href="https://developer.chrome.com/devsummit/?utm_source=webfu&utm_medium=hpp-banner&utm_campaign=chromedevsummit_may18" class="gc-analytics-event" data-category="webFu" data-label="cds18-hpp" data-action="banner">#ChromeDevSummit</a> site is live, happening Nov 12-13 in San Francisco, CA<br> Check it out for details and request an invite. We'll be diving deep into modern web tech & looking ahead to the platform's future.
+    </style> <b>Chrome Dev Summit 2018</b> is happening now and streaming live on YouTube. <a href="https://developer.chrome.com/devsummit/" class="gc-analytics-event" data-category="webFu" data-label="cds-banner-schedule">Watch now</a>.
