--- a/src/content/en/feedback/_project.yaml
+++ b/src/content/en/feedback/_project.yaml
@@ -33,4 +33,4 @@ announcement:
         vertical-align: middle;
         margin-right: 8px;
       }
-    </style> The <a href="https://developer.chrome.com/devsummit/?utm_source=webfu&utm_medium=hpp-banner&utm_campaign=chromedevsummit_may18" class="gc-analytics-event" data-category="webFu" data-label="cds18-hpp" data-action="banner">#ChromeDevSummit</a> site is live, happening Nov 12-13 in San Francisco, CA<br> Check it out for details and request an invite. We'll be diving deep into modern web tech & looking ahead to the platform's future.
+    </style> Missed the action at the 2018 <b>Chrome Dev Summit</b>? Catch up with our playlist on the Google Chrome Developers channel on YouTube. <a href="https://www.youtube.com/playlist?list=PLNYkxOF6rcIDjlCx1PcphPpmf43aKOAdF" class="gc-analytics-event" data-category="webFu" data-label="cds-watch-playlist">Watch now.</a>
