New Autoplay Web Audio Blog Post (#6874)
* Added web audio blog post for games.

Added tomgreenaway as a contributor.

* Fixing some metadata for the audio autoplay blogpost.

* Swapped the featured image to refer to the 'audio.png' image.

* Added new chromium wiki links.

* Added Mounir and Hongchan as co-authors.

* Resolved mistake of creating a new profile for hongchan when he already had one.

Fixed ordering of contributors in yaml.

* Updated scheduled release date.

--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -625,6 +625,21 @@ greenido:
   description:
     en: Ido is a Developer Advocate and a runner
 
+tomgreenaway:
+  name:
+    given: Tom
+    family: Greenaway
+  org:
+    name: Google
+    unit: Developer Relations
+  country: AU
+  role:
+    - author
+  github: tcmg
+  twitter: tcmg
+  description:
+    en: Chrome & Web Developer Relations Games Lead
+
 eligrey:
   name:
     given: Eli
@@ -993,6 +1008,19 @@ sethladd:
   twitter: sethladd
   role:
     - author
+
+mlamouri:
+  name:
+    given: Mounir
+    family: Lamouri
+  org:
+    name: Google
+    unit: Chrome
+  country: CA
+  role:
+    - engineer
+  description:
+    en: Software Engineer for Web Media Experience
 
 ericlawrence:
   name:
