fix #5117 and #5255 and #5794

--- a/src/content/en/tools/_redirects.yaml
+++ b/src/content/en/tools/_redirects.yaml
@@ -1,5 +1,8 @@
 redirects:
 
+- from: /web/tools/lighthouse/audits/unoptimized-images
+  to: /web/tools/lighthouse/audits/optimize-images
+
 - from: /web/tools/lighthouse/audits/first-interactive
   to: /web/tools/lighthouse/audits/first-cpu-idle
 
