--- a/src/content/en/tools/lighthouse/_toc.yaml
+++ b/src/content/en/tools/lighthouse/_toc.yaml
@@ -142,15 +142,13 @@ toc:
     path: /web/tools/lighthouse/audits/geolocation-on-load
   - title: Avoids Requesting The Notification Permission On Page Load
     path: /web/tools/lighthouse/audits/notifications-on-load
-  - title: Avoids Web SQL
-    path: /web/tools/lighthouse/audits/web-sql
   - title: Displays Images With Incorrect Aspect Ratio
     path: /web/tools/lighthouse/audits/aspect-ratio
   - title: Includes Front-End JavaScript Libraries With Known Security Vulnerabilities
     path: /web/tools/lighthouse/audits/vulnerabilities
   - title: Manifest's short_Name Won't Be Truncated When Displayed On Homescreen
     path: /web/tools/lighthouse/audits/manifest-short_name-is-not-truncated
-  - title: Opens External Anchors Using rel="noopener"
+  - title: Links to cross-origin destinations are unsafe
     path: /web/tools/lighthouse/audits/noopener
   - title: Prevents Users From Pasting Into Password Fields
     path: /web/tools/lighthouse/audits/password-pasting
@@ -162,6 +160,9 @@ toc:
     path: /web/tools/lighthouse/audits/http2
   - title: Uses Passive Event Listeners To Improve Scrolling Performance
     path: /web/tools/lighthouse/audits/passive-event-listeners
+  - title: Avoids Web SQL
+    path: /web/tools/lighthouse/audits/web-sql
+    status: deprecated
 - title: SEO
   section:
   - title: Document Does Not Have A Meta Description
