--- a/src/content/en/tools/chrome-devtools/_toc.yaml
+++ b/src/content/en/tools/chrome-devtools/_toc.yaml
@@ -1,6 +1,8 @@
 toc:
 - title: Home
   path: /web/tools/chrome-devtools/
+- title: Open DevTools
+  path: /web/tools/chrome-devtools/open
 - title: DevTools for Beginners
   section:
   - title: HTML and the DOM
