--- a/src/content/en/tools/chrome-devtools/_toc.yaml
+++ b/src/content/en/tools/chrome-devtools/_toc.yaml
@@ -49,7 +49,13 @@ toc:
   - title: Keyboard Shortcuts
     path: /web/tools/chrome-devtools/shortcuts
 - title: Accessibility
-  path: /web/tools/chrome-devtools/accessibility/reference
+  section:
+  - title: Reference
+    path: /web/tools/chrome-devtools/accessibility/reference
+  - title: Guides
+    section:
+    - title: Track Which Element Has Focus
+      path: /web/tools/chrome-devtools/accessibility/focus
 - title: Simulate Mobile Devices
   section:
   - title: Overview
