--- a/src/content/en/tools/chrome-devtools/_toc.yaml
+++ b/src/content/en/tools/chrome-devtools/_toc.yaml
@@ -15,6 +15,10 @@ toc:
     path: /web/tools/chrome-devtools/css/
   - title: CSS Reference
     path: /web/tools/chrome-devtools/css/reference
+  - title: Guides
+    section:
+    - title: Force DevTools Into Print Preview Mode
+      path: /web/tools/chrome-devtools/css/print-preview
 - title: JavaScript
   section:
   - title: Get Started
