--- a/src/content/en/fundamentals/native-hardware/_toc.yaml
+++ b/src/content/en/fundamentals/native-hardware/_toc.yaml
@@ -9,3 +9,5 @@ toc:
     path: /web/fundamentals/native-hardware/fullscreen/
   - title: Click to Call
     path: /web/fundamentals/native-hardware/click-to-call/
+  - title: Building a Device for WebUSB
+    path: /web/fundamentals/native-hardware/build-for-webusb/
