--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "clean": "gulp clean",
     "start": "./start-appengine.sh",
     "test": "gulp test",
+    "precommit": "gulp update-updated_on",
     "prepush": "npm test",
     "prestart": "gulp build",
     "postinstall": "tools/update-resources.sh && gulp post-install"
