--- a/src/content/en/shows/_book.yaml
+++ b/src/content/en/shows/_book.yaml
@@ -25,7 +25,12 @@ upper_tabs:
           path: https://www.youtube.com/playlist?list=PLNYkxOF6rcICWx0C9LVWWVqvHlYJyqw7g
           status: external
         - title: HTTP203
-          path: /web/shows/http203
+          section:
+          - title: YouTube
+            path: https://www.youtube.com/playlist?list=PLNYkxOF6rcIAKIQFsNbV0JDws_G_bnNo9
+            status: external
+          - title: Podcasts
+            path: /web/shows/http203/podcast/
         - include: /web/shows/supercharged/_toc.yaml
         - title: Developer Diary with Paul Lewis
           path: https://www.youtube.com/playlist?list=PLNYkxOF6rcIBykcJ7bvTpqU7vt-oey72J
