Add profile for Thomas Steiner

--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -1628,6 +1628,24 @@ emilystark:
   twitter: estark37
   email: estark@chromium.org
 
+thomassteiner:
+  name:
+    given: Thomas
+    family: Steiner
+  homepage: https://blog.tomayac.com/
+  google: +ThomasSteiner
+  twitter: tomayac
+  github: tomayac
+  description:
+    en: "Tom is a Developer Advocate"
+  org:
+    name: Google
+    unit: Developer Relations
+  country: DE
+  role:
+    - author
+  email: tomac@google.com
+
 sunyunjia:
   name:
     given: Sandra
