--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -22,6 +22,19 @@
 #   country: US               # Optional - ISO Country Code (not shown)
 #   email: test@example.com   # Optional (not shown)
 
+mustaqahmed:
+  name:
+    given: Mustaq
+    family: Ahmed
+  org:
+    name: Google
+    unit: Software Engineer
+  country: CA
+  role:
+    - engineer
+  email: mustaq@google.com
+  github: mustaqahmed
+
 iamakulov:
   name:
     given: Ivan
