--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ scratch/*
 tools/claat
 gcloud-client-secret.json
 package-lock.json
+index.yaml
 
 ## Files that are updated regularly from DevSite
 # These files will be updated by tools/update-resources.sh
